--- a/src/styles/pages/components-dash/components/_userInfo.scss
+++ b/src/styles/pages/components-dash/components/_userInfo.scss
@@ -1,6 +1,6 @@
 .blackboard__userInfo{
     display: flex;
-    background-color: lightcoral;
+
     h1 {
         width: 80%;
         margin: 0 auto;
@@ -10,45 +10,40 @@
         line-height: 2.6rem;
         color: #252733;
     }
-    .propertyLinkContainer {
+    .userInfo__propertyLink {
         display:none;
     // propertyLinkContainer is block to desktop
     }
 }
-@media screen and (min-width:499px) {
-    .blackboard__userInfo h1 {
-        text-align:center;
-
-    }
-}
-@media screen and (min-width:1024px) {
+@media screen and (min-width:499px) { // vertical menu show property link
     .blackboard__userInfo {
-        margin: 0 13px;
         display: flex;
         flex-direction: column;
-    }
-    .blackboard__userInfo h1 {
-        text-align: initial;
-        width: 100%;
-        margin-bottom: 12px;
-    }
-    .propertyLinkContainer {
-        display: block;
-        display: flex;
-        justify-content: flex-end;
-        font-size: 1.4rem;
-        font-weight: bold;
-        color: rgba(108, 109, 112, 1);
-    }
-    .propertyLinkContainer div {
-        width: 72px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-left: 6px;
-    }
-    .propertyLinkContainer div img{
-        width: 13.7px;
-        height: 15.44px;
+        margin: 13px ;
+        margin-left: 65px;
+        padding-right: 20px;
+
+        h1 {
+            width: 100%;
+            margin-bottom: 12px;
+        }
+        .userInfo__propertyLink {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            font-size: 1.4rem;
+            font-weight: bold;
+            color: rgba(108, 109, 112, 1);
+            div {
+                width: 60px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                img{
+                    width: 100%;
+                    }
+                }
+        }
     }
 }
+
