--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -4,7 +4,7 @@ $black:#000000;
 $white:#ffffff;
 $grey:hsla(23, 47%, 93%, 0.500);
 $btn__login:#C9BCAC;
-$width__share:100%;
+$width__share:100%; 
 /* Herencias */
 @mixin formLogin__inputs($width) {
     width: $width;
@@ -18,85 +18,85 @@ $width__share:100%;
     width: 100vw;
     height: 100vh;
     max-width: 1400px;
-}
-.formLogin__Container {
-    width: 100%;
-    height: 100%;
-}
-.formLogin {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 88%;
-    max-width: 600px;
-    height: auto;
-    margin: 20vh auto;
-    background-color: $black;
-}
-.imgLogin__Container {
-    display: none;
-
-}
-.formLogin__div--grey {
-    width:  100%;
-    height: 55px;
-    background-color: $grey;
-}
-.formLogin__h1 {
-    color:$white;
-    font-size: 6vw;
-    font-weight: lighter;
-    margin-bottom: 15%;
-}
-.formLogin__input--id, .formLogin__input--pass  {
-    @include formLogin__inputs(77%);
-    height: 45px;
-}
-.formLogin__showAuthErr {
-    color:rgb(223, 182, 106);
-    margin-top: 20px;
-}
-.formLogin__btn {
-    width: 55%;
-    height: 35px;
-    background-color: $btn__login;
-    color:$black;
-    border-style: none;
-    border-radius: 5px;
-    margin: 5% 0;
-}
-.formLogin__paragraph {
-    color:$white;
-    font-size: 2.2vw;
-}
-.formLogin__anchor{
-    color:$white;
+    .login__imgContainer {
+        display: none;
+    }
+    .login__formContainer {
+        width: 100%;
+        height: 100%;
+        .login_divDecoration {
+            width:  100%;
+            height: 55px;
+            background-color: $grey;
+        }
+        .login__form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 88%;
+            max-width: 600px;
+            height: auto;
+            margin: 20vh auto;
+            background-color: $black;
+            h1 {
+                color:$white;
+                font-size: 6vw;
+                font-weight: lighter;
+                margin-bottom: 15%;
+            }
+            input {
+                @include formLogin__inputs(77%);
+                height: 45px;
+            }
+            div {
+                color:rgb(223, 182, 106);
+                margin-top: 20px;
+                font-size: 1.2vw;
+            }
+            button {
+                width: 55%;
+                height: 35px;
+                background-color: $btn__login;
+                color:$black;
+                border-style: none;
+                border-radius: 5px;
+                margin: 5% 0;
+            }
+            p {
+                color:$white;
+                font-size: 2.2vw;
+            }
+            a {
+                color:$white;
+            }
+        }
+    }
 }
 @media only screen and (min-width:1100px){
     .login {
         display: flex;
         flex-direction: row;
-    }
-    .formLogin__Container {
-        display: block;
-        width: 42%;
-    }
-    .imgLogin__Container{
-        display: block;
-        width: 58%;
-    }
-    .imgLoginContainer__img {
-        width: 100%;
-        height: 100%;
-    }
-    .formLogin {
-        width: 100%;
-    }
-    .formLogin__h1 {
-        font-size: 4vw;
-    }
-    .formLogin__paragraph {
-        font-size: 1.5vw;
+        .login__imgContainer{
+            display: block;
+            width: 50%;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .login__formContainer {
+            display: block;
+            width: 50%;
+            .login__form {
+                width: 100%;
+                h1 {
+                    font-size: 4vw;
+                }
+                p {
+                    font-size: 1.5vw;
+                }
+            }
+        }
     }
 
 }
