--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -318,13 +318,14 @@
 .modal-overlay {
   position: fixed;
   top: 0;
-  z-index: 100;
   display: grid;
   place-items: center;
-  min-width: 317px;
+  z-index: 200;
+  min-width: 290px;
   width: 100vw;
   height: 100vh;
   background-color: rgba(20, 19, 20, 0.5);
+  visibility: hidden;
 }
 .modal-overlay .modal-container {
   display: flex;
@@ -332,8 +333,8 @@
   align-items: center;
   justify-content: space-between;
   width: 90%;
-  height: 40%;
-  padding: 3.5rem 2rem;
+  height: 50%;
+  padding: 2rem;
   border-radius: 5px;
   background: #FFFFFF;
 }
@@ -345,17 +346,17 @@
   padding: 2%;
 }
 .modal-overlay .modal-container h3 {
-  font-size: 2.1rem;
+  font-size: 2rem;
 }
 .modal-overlay .modal-container div {
-  width: 60%;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .modal-overlay .modal-container div button {
   width: 86px;
   height: 40px;
-  border-style: none;
+  margin: 2%;
   border-radius: 5px;
 }
 .modal-overlay .modal-container div :nth-child(1) {
@@ -600,6 +601,10 @@ body {
 
 .hideBtn {
   opacity: 30%;
+}
+
+.show {
+  visibility: visible;
 }
 
 /*# sourceMappingURL=styles.css.map */
